[gd_scene load_steps=2 format=2]

[ext_resource path="res://Assets/Scripts/UI/LevelSelector.gd" type="Script" id=1]

[node name="LevelSelector" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Banner" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 57.0
text = "i18n_LEVELSELECT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 57.0
text = "i18n_BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CategoryContainer" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CategorySelector" type="VBoxContainer" parent="CategoryContainer"]
alignment = 1
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
